bk_ida/bzip2ida/c3/BZ2_hbCreateDecodeTables
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:750:12: error: expected expression
*( _OWORD *)( base + 19) = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:750:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( base + 19) = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:751:14: error: expected expression
*( ( _OWORD *)base + 4) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:751:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 4) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:752:14: error: expected expression
*( ( _OWORD *)base + 3) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:752:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 3) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:753:14: error: expected expression
*( ( _OWORD *)base + 2) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:753:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 2) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:754:14: error: expected expression
*( ( _OWORD *)base + 1) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:754:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 1) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:755:12: error: expected expression
*( _OWORD *)base = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:755:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)base = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:793:12: error: expected expression
*( _OWORD *)( base + 19) = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:793:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( base + 19) = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:794:14: error: expected expression
*( ( _OWORD *)base + 4) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:794:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 4) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:795:14: error: expected expression
*( ( _OWORD *)base + 3) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:795:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 3) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:796:14: error: expected expression
*( ( _OWORD *)base + 2) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:796:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 2) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:797:14: error: expected expression
*( ( _OWORD *)base + 1) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:797:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 1) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:798:12: error: expected expression
*( _OWORD *)base = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:798:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)base = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:905:12: error: expected expression
*( _OWORD *)( limit + 19) = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:905:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( limit + 19) = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:906:14: error: expected expression
*( ( _OWORD *)limit + 4) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:906:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)limit + 4) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:907:14: error: expected expression
*( ( _OWORD *)limit + 3) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:907:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)limit + 3) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:908:14: error: expected expression
*( ( _OWORD *)limit + 2) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:908:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)limit + 2) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:909:14: error: expected expression
*( ( _OWORD *)limit + 1) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:909:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)limit + 1) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:910:12: error: expected expression
*( _OWORD *)limit = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:910:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)limit = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/huffman.c:953:44: error: use of undeclared identifier 'xmmword_41B4D0'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_41B4D0); 
                                           ^
37 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbCreateDecodeTables/src/obj/huffman.o] Error 1
